--- a/LeasingCompanyMS/Pages/AvailableCarsPage/AvailableCarsPage.xaml
+++ b/LeasingCompanyMS/Pages/AvailableCarsPage/AvailableCarsPage.xaml
@@ -15,38 +15,133 @@
 		<browseCarsPage:AvailableCarsPageViewModel />
 	</Page.DataContext>
 
-	<Grid>
+	<Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
 		<!-- Available car information -->
-		<StackPanel>
-			<DataGrid IsReadOnly="True"
+		<Grid VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+			<Grid.RowDefinitions>
+				<RowDefinition Height="Auto" />
+				<RowDefinition Height="*" />
+				<RowDefinition Height="Auto" />
+			</Grid.RowDefinitions>
+			
+			<Label Grid.Row="0"
+			       Content="Available cars"
+			       HorizontalAlignment="Left"
+			       VerticalAlignment="Top"
+			       FontSize="24"
+			       Foreground="White" />
+
+			<DataGrid Grid.Row="1"
+			          IsReadOnly="True"
 			          AutoGenerateColumns="False"
 			          ItemsSource="{Binding AvailableCars, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-			          SelectedItem="{Binding SelectedCar, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+			          SelectedItem="{Binding SelectedCar, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+			          SelectionMode="Single"
+			          SelectionUnit="FullRow"
+			          VerticalScrollBarVisibility="Auto"
+			          VerticalAlignment="Stretch"
+			          VerticalContentAlignment="Stretch">
 				<DataGrid.Columns>
-					<DataGridTextColumn Header="Make" Width="*" Binding="{Binding Mark}" />
+					<DataGridTextColumn Header="Brand" Width="*" Binding="{Binding Brand}" />
 					<DataGridTextColumn Header="Model" Width="*" Binding="{Binding Model}" />
-					<DataGridTextColumn Header="Year of production" Width="*" Binding="{Binding Year}" />
-					<DataGridTextColumn Header="Mileage" Width="*" />
-					<DataGridTextColumn Header="Registration" Width="*" Binding="{Binding Registration}" />
-					<DataGridTextColumn Header="VIN" Width="*" Binding="{Binding VIN}" />
-					<DataGridTextColumn Header="MonthlyLease" Width="*" Binding="{Binding MonthlyLease}" />
+					<DataGridTextColumn Header="Production year" Width="*" Binding="{Binding ProductionYear}" />
+					<DataGridTextColumn Header="Body color" Width="*" Binding="{Binding BodyColor}" />
+					<DataGridTextColumn Header="Fuel type" Width="*" Binding="{Binding Engine.Type}" />
+					<DataGridTextColumn Header="Displacement" Width="*" Binding="{Binding Engine.Displacement}" />
+					<DataGridTextColumn Header="Horsepower" Width="*" Binding="{Binding Engine.Power}" />
+					<DataGridTextColumn Header="VIN number" Width="*" Binding="{Binding Vin}" />
+					<DataGridTextColumn Header="Netto value" Width="*" Binding="{Binding EstimatedNetValue}" />
 				</DataGrid.Columns>
 			</DataGrid>
 
-			<Border Height="16"/>
-			
-			<Button Command="{Binding OpenLeaseCarDialogCommand}"
-			        Style="{StaticResource controlButton}"
-			        HorizontalAlignment="Left"
-			        Content="Lease"
-			        Foreground="White"
-			        Padding="32 8 32 8" />
+			<StackPanel Grid.Row="2">
+				<Border Height="8" />
 
-		</StackPanel>
+				<Grid>
+					<Grid.ColumnDefinitions>
+						<ColumnDefinition Width="1*" />
+						<ColumnDefinition Width="1*" />
+					</Grid.ColumnDefinitions>
 
+					<StackPanel Grid.Column="0">
+						<StackPanel HorizontalAlignment="Stretch">
+							<Label Content="Leasing contract duration:"
+							       HorizontalAlignment="Left"
+							       VerticalAlignment="Top"
+							       Margin="0,0,0,0"
+							       Foreground="White" />
+
+							<ComboBox ItemsSource="{Binding LeasingDurationOptions, Mode=OneTime}"
+							          SelectedValue="{Binding SelectedLeasingDurationInMonths, Mode=TwoWay}"
+							          SelectedValuePath="Key"
+							          DisplayMemberPath="Value" />
+						</StackPanel>
+
+						<Border Height="8" />
+
+						<StackPanel HorizontalAlignment="Stretch">
+							<Label Content="Down payment:"
+							       HorizontalAlignment="Left"
+							       VerticalAlignment="Top"
+							       Margin="0,0,0,0"
+							       Foreground="White" />
+
+							<ComboBox ItemsSource="{Binding DownPaymentOptions, Mode=OneTime}"
+							          SelectedValue="{Binding SelectedDownPaymentOption, Mode=TwoWay}"
+							          SelectedValuePath="Key"
+							          DisplayMemberPath="Value" />
+						</StackPanel>
+
+						<Border Height="8" />
+
+						<StackPanel HorizontalAlignment="Stretch">
+							<Label Content="Yearly mileage limit in km:"
+							       HorizontalAlignment="Left"
+							       VerticalAlignment="Top"
+							       Margin="0,0,0,0"
+							       Foreground="White" />
+							<ComboBox ItemsSource="{Binding YearlyMileageLimitOptions, Mode=OneTime}"
+							          SelectedValue="{Binding SelectedYearlyMileageLimitOption, Mode=TwoWay}"
+							          SelectedValuePath="Value"
+							          DisplayMemberPath="Key" />
+						</StackPanel>
+
+						<Border Height="8" />
+
+						<StackPanel HorizontalAlignment="Stretch" Orientation="Horizontal">
+							<Label Content="Monthly lease installment:"
+							       HorizontalAlignment="Left"
+							       VerticalAlignment="Top"
+							       Margin="0,0,0,0"
+							       Foreground="White" />
+
+							<Label Content="{Binding MonthlyLeaseInstalment}"
+							       HorizontalAlignment="Left"
+							       VerticalAlignment="Top"
+							       Margin="0,0,0,0"
+							       Foreground="White" />
+
+							<Label Content="PLN"
+							       HorizontalAlignment="Left"
+							       VerticalAlignment="Top"
+							       Margin="0,0,0,0"
+							       Foreground="White" />
+						</StackPanel>
+
+						<Border Height="16" />
+
+						<Button Command="{Binding OpenLeaseCarDialogCommand}"
+						        Style="{StaticResource controlButton}"
+						        HorizontalAlignment="Left"
+						        Content="Lease"
+						        Foreground="White"
+						        Padding="32 8 32 8" />
+					</StackPanel>
+				</Grid>
+			</StackPanel>
+		</Grid>
 
 		<!-- Leasing overlay -->
-		<!-- NOTE(piotr.klosowski): This should be separate view and navigation should be handled differently -->
 		<Grid Visibility="{Binding IsLeaseCarDialogOpen}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
 			<Grid Background="Black" Opacity="0.5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
 			<leasingTermsSummary:LeasingTermsSummary
