--- a/LeasingCompanyMS/Pages/AvailableCarsPage/AvailableCarsPage.xaml
+++ b/LeasingCompanyMS/Pages/AvailableCarsPage/AvailableCarsPage.xaml
@@ -3,8 +3,8 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:browseCarsPage="clr-namespace:LeasingCompanyMS.Pages.BrowseCarsPage"
-      xmlns:leasingTermsSummary="clr-namespace:LeasingCompanyMS.Pages.Components.LeasingTermsSummary"
+      xmlns:browseCarsPage="clr-namespace:LeasingCompanyMS.Pages.AvailableCarsPage"
+      xmlns:leasingTermsSummary="clr-namespace:LeasingCompanyMS.Pages.AvailableCarsPage.Components.LeasingTermsSummary"
       mc:Ignorable="d"
       d:DesignHeight="450" d:DesignWidth="800"
       Title="BrowseCarsPage"
