--- a/LeasingCompanyMS/Pages/MyLeasingsPage/MyLeasingsPage.xaml
+++ b/LeasingCompanyMS/Pages/MyLeasingsPage/MyLeasingsPage.xaml
@@ -3,17 +3,17 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:myLeasingsPage="clr-namespace:LeasingCompanyMS.Pages.ManagePaymentsPage"
       xmlns:converters="clr-namespace:LeasingCompanyMS.Converters"
       xmlns:purchaseCar="clr-namespace:LeasingCompanyMS.Pages.Components.PurchaseCar"
       xmlns:returnCar="clr-namespace:LeasingCompanyMS.Pages.Components.ReturnCar"
+      xmlns:myLeasingsPage1="clr-namespace:LeasingCompanyMS.Pages.MyLeasingsPage"
       mc:Ignorable="d"
       d:DesignHeight="450" d:DesignWidth="800"
       Title="ManagePaymentsPage"
       ShowsNavigationUI="False">
 
 	<Page.DataContext>
-		<myLeasingsPage:MyLeasingsPageViewModel />
+		<myLeasingsPage1:MyLeasingsPageViewModel />
 	</Page.DataContext>
 
 	<Page.Resources>
@@ -84,47 +84,6 @@
 						</DataGrid.Columns>
 					</DataGrid>
 				</Expander>
-			</Grid>
-
-			<Grid Grid.Row="3"
-			      HorizontalAlignment="Stretch"
-			      VerticalAlignment="Stretch">
-				<StackPanel Orientation="Vertical"
-				            HorizontalAlignment="Stretch"
-				            VerticalAlignment="Stretch">
-					<Grid>
-						<Label Content="Car Model" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" Height="28"
-						       Width="148" Foreground="White" />
-						<Label Content="{Binding SelectedLeasing}" HorizontalAlignment="Right" VerticalAlignment="Top"
-						       Margin="0,0,0,0" Height="28" Width="148" Foreground="White" />
-					</Grid>
-					<Grid>
-						<Label Content="From" HorizontalAlignment="Left" VerticalAlignment="Center" Height="28" Width="148"
-						       Foreground="White" Grid.ColumnSpan="2" />
-						<Label x:Name="leasingFrom" Content="{Binding SelectedLeasing.From}" HorizontalAlignment="Right"
-						       VerticalAlignment="Center" Margin="0,0,0,0" Height="28" Width="148" Foreground="White" Grid.Column="1" />
-					</Grid>
-					<Grid>
-						<Label Content="To" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,0,0" Height="28" Width="148"
-						       Foreground="White" />
-						<Label x:Name="leasingTo" Content="{Binding SelectedLeasing.To}" HorizontalAlignment="Right"
-						       VerticalAlignment="Top" Margin="0,0,0,0" Height="28" Width="148" Foreground="White" />
-					</Grid>
-					<Grid>
-						<Label Content="Months left" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,0,0" Height="28"
-						       Width="148" Foreground="White" />
-						<Label x:Name="leasingLeft" Content="{Binding SelectedLeasing.LeasingDurationInMonths}"
-						       HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,0,0,0" Height="28" Width="148" Grid.Row="4"
-						       Grid.Column="2" Foreground="White" />
-					</Grid>
-					<Grid Margin="0, 0, 0, 0">
-						<Label Content="Monthly lease" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,0,0" Height="28"
-						       Width="148" Foreground="White" />
-						<Label x:Name="leasingMonthly" Content="{Binding MonthlyLease}" HorizontalAlignment="Right"
-						       VerticalAlignment="Top" Margin="0,0,0,0" Height="28" Width="148" Grid.Row="5" Grid.Column="2"
-						       Foreground="White" />
-					</Grid>
-				</StackPanel>
 			</Grid>
 
 			<StackPanel Grid.Row="4"
