--- a/LeasingCompanyMS/Pages/ManageCarsPage/Components/AddNewCar/AddNewCarPageWindow.xaml
+++ b/LeasingCompanyMS/Pages/ManageCarsPage/Components/AddNewCar/AddNewCarPageWindow.xaml
@@ -1,9 +1,8 @@
-﻿<Page x:Class="LeasingCompanyMS.Pages.Components.AddNewCar.AddNewCarPageWindow"
+﻿<Page x:Class="LeasingCompanyMS.Pages.ManageCarsPage.Components.AddNewCar.AddNewCarPageWindow"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:local="clr-namespace:LeasingCompanyMS.Pages.Components.AddNewCar"
       mc:Ignorable="d"
       Title="AddNewPageWindow">
 	<Border Padding="16">
